	* Reworked 'src/glassplayer/serverid.cpp' so as not to rely upon
	the presence of the 'QUrl::isLocalFile()' method.
2016-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Added an '#include <stdlib.h>' statement in
	'src/glassplayer/codec_fdk.cpp'.
	* Fixed a bug in 'src/glassplayer/codec_fdk.h' that broke the
	build under RHEL 6.
2016-02-16 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.4.
2016-02-17 Fred Gleason <fredg@paravelsystems.com>
	* Modified stat tag names to include spaces.
	* Fixed a bug in 'src/glassplayergui/statsdialog.cpp' that caused
	the label of the 'Show Stats' button to fail to update when the
	dialog was closed by means of the WM-provided close button.
2016-02-17 Fred Gleason <fredg@paravelsystems.com>
	* Set the statistics display panels to be read-only in
	'src/glassplayergui/statspanel.cpp'.
2016-02-18 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.6.5.
2016-04-01 Fred Gleason <fredg@paravelsystems.com>
	* Added support for JACK.
2016-04-04 Fred Gleason <fredg@paravelsystems.com>
	* Added '--server-script-up=' and '--server-script-down=' switches
	to glassplayer(1).
2016-04-04 Fred Gleason <fredg@paravelsystems.com>
	* Fixed typos in the 'DEVICE OPTIONS' section of
	'docs/glassplayer.xml'.
2016-04-04 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/dev_jack.cpp' that caused xruns.
2016-04-04 Fred Gleason <fredg@paravelsystems.com>
	* Added a '--meter-data' switch	to glassplayer(1).
2016-04-05 Fred Gleason <fredg@paravelsystems.com>
	* Added level meters to glassplayergui(1).
2016-04-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented support for the '--meter-data' switch for JACK
	devices.
2016-04-05 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'src/glassplayer/glassplayer.cpp' that caused
	invalid meter levels to be emitted.
2016-04-05 Fred Gleason <fredg@paravelsystems.com>
	* Implemented metadata updates for JACK devices.